--- a/style.css
+++ b/style.css
@@ -1,16 +1,10 @@
-/*------------------------------------------------------------------
-    Version: 1.0
--------------------------------------------------------------------*/
+/*Version: 1.0*/
 
-/*------------------------------------------------------------------
-    IMPORT FONTS
--------------------------------------------------------------------*/
+/*IMPORT FONTS*/
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700');
 
-/*------------------------------------------------------------------
-    IMPORT FILES
--------------------------------------------------------------------*/
+/*IMPORT FILES*/
 
 @import url(css/animate.css);
 @import url(css/camera.css);
@@ -19,9 +13,7 @@
 @import url(css/owl.carousel.css);
 @import url(css/font-awesome.min.css);
 
-/*------------------------------------------------------------------
-    SKELETON
--------------------------------------------------------------------*/
+/*SKELETON*/
 
 body {
     color: #999999;
